--- a/frontend/expense/public/index.html
+++ b/frontend/expense/public/index.html
@@ -26,12 +26,15 @@
     <!-- fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=Poppins:wght@400;600;800&family=Ubuntu:wght@400;600;800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&family=NTR&family=Poppins:wght@400;600;800&family=Ubuntu:wght@400;500;600;800&display=swap"
         rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=NTR&display=swap" rel="stylesheet"> -->
+
     <!--
         font-family: 'Nunito', sans-serif;
         font-family: 'Poppins', sans-serif;
         font-family: 'Ubuntu', sans-serif;
+        font-family: 'NTR', sans-serif;
     -->
 
     <title>React App</title>
